fixed mobile layout bug

--- a/css/index.pre-footer.css
+++ b/css/index.pre-footer.css
@@ -23,16 +23,13 @@
   margin: 0px 18px;
 }
 
-/*.articles__carousel{
-    width: 50%;
-    max-width: 1800px;
-} */
-
-.articles {
-  display: flex;
-  justify-content: space-between; /* Розташування елементів з максимальною відстанню між ними */
-  /*align-items: center; /* Вирівнювання елементів по вертикалі */
-  width: 100%; /* Ширина контейнера */
+@media (min-width: 600px) {
+  .articles {
+    display: flex;
+    justify-content: space-between; /* Розташування елементів з максимальною відстанню між ними */
+    /*align-items: center; /* Вирівнювання елементів по вертикалі */
+    width: 100%; /* Ширина контейнера */
+  }
 }
 
 .articles__news,
@@ -62,10 +59,10 @@
   margin: 0 auto;
   max-width: 800px;
   font-size: 50px;
-  font-weight: 600; 
+  font-weight: 600;
 }
 
-.articles-news__description{
+.articles-news__description {
   margin-top: 30px;
   margin-bottom: 30px;
   font-weight: 500;
@@ -73,7 +70,7 @@
   color: #686868;
 }
 
-.articles-news__text{
+.articles-news__text {
   margin-top: 30px;
   margin-bottom: 90px;
   font-weight: 400;
@@ -81,49 +78,59 @@
   color: #989898;
 }
 
-.articles-news__link{
+.articles-news__link {
   background-color: #ea9449;
   color: white;
   padding: 20px 30px;
   text-decoration: none;
   font-size: 18px;
   font-weight: 500;
-  
+}
+@media (min-width: 600px) {
+  .price-list__intro {
+    display: flex; /* Встановлює flex-контейнер */
+    justify-content: flex-start; /* Розташування елементів з максимальною відстанню між ними */
+    align-items: center; /* Вирівнювання елементів по вертикалі */
+    width: 100%; /* Ширина контейнера */
+  }
 }
 
-.price-list__intro{
-  display: flex;
-  justify-content: space-between; /* Розташування елементів з максимальною відстанню між ними */
-  /*align-items: center; /* Вирівнювання елементів по вертикалі */
-  width: 75%; /* Ширина контейнера */
+.price-list__intro-image {
+  max-width: 50%; /* Максимальна ширина зображення */
+  height: auto; /* Автоматична висота, щоб зберегти пропорції зображення */
 }
 
-.price-list__intro-image, .price-list__details{
+.price-list__details {
+  max-width: 50%; /* Максимальна ширина контейнера з деталями */
+}
+
+.price-list__intro-image,
+.price-list__details {
   padding: 22px;
-  padding-top: 125px;
+  padding-top: 10px;
 }
-
-.price-list__intro-image{
-  margin-left: 20px;
-  margin-bottom: 65px;
-  max-width: 1800px;
-  width: 675px;
-  height: 675px;
-}
-
-.price-list__title{
-  width: 500px;
+.price-list__title {
   text-align: left;
-  margin: auto 30px;
+  margin: auto;
+  margin-left: 0px;
+  margin-right: 30px;
   max-width: 800px;
   font-size: 50px;
-  font-weight: 600; 
+  font-weight: 600;
 }
 
-.price-list__description{
+.price-list__description {
   margin-top: 30px;
   margin-bottom: 30px;
   font-weight: 500;
   font-size: 20px;
   color: #686868;
+}
+
+.price_tag{
+  color: #7c782f;
+}
+
+.discount{
+  color: #ea9449;;
 }
